# chatbot-phi3

./: README.md  Untitled-1.ipynb  chatbot_app_dev.ipynb  main.py  pyproject.toml  red.md
